--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.47.7",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^11.14.4",
+    "gantt-task-react": "^0.3.9",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
